--- a/src/components/menu-item/menu-item-styles.scss
+++ b/src/components/menu-item/menu-item-styles.scss
@@ -1,17 +1,3 @@
-.homepage {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding: 20px 80px;
-}
-
-.directory-menu {
-  width: 100%;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-}
-
 .menu-item {
   min-width: 30%;
   height: 240px;
@@ -21,7 +7,28 @@
   justify-content: center;
   border: 1px solid black;
   margin: 0 7.5px 15px;
+  cursor: pointer;
+  position: relative;
+  overflow: hidden;
+  &:hover {
+    cursor: pointer;
 
+    & .background-image {
+      transform: scale(1.1);
+      transition: 6s cubic-bezier(0.25, 0.45, 0.45, 0.95);
+    }
+  }
+
+  .background-image {
+    width: 100%;
+    height: 100%;
+    background-size: cover;
+    position: absolute;
+    z-index: -1;
+  }
+  &.large {
+    height: 350px;
+  }
   &:first-child {
     margin-right: 7.5px;
   }
@@ -38,7 +45,8 @@
     align-items: center;
     justify-content: center;
     border: 1px solid black;
-
+    background-color: #fff;
+    opacity: 0.7;
     .title {
       font-weight: bold;
       margin-bottom: 6px;
